includeファイル分離

--- a/home/header.html
+++ b/home/header.html
@@ -5,10 +5,17 @@
 		</div>
 		<nav>
 			<ul class="" style="margin:0 8.0rem 0 0; padding:0;">
-				<li id="top" class="header-pointer">トップ</li>
-				<li id="profile" class="header-pointer">profile</li>
-				<li id="portfolio" class="header-pointer">portfolio</li>
-				<li id="contact" class="header-pointer">Contact</li>
+				<li id="heder-top" class="header-pointer">トップ</li>
+				<li id="" class="header-pointer dropdown">
+					<a class="dropdown-toggle">portfolio</a>
+					<div class="dropdown-menu">
+						<a id="heder-profile" class="dropdown-item">プロフィール</a>
+						<a id="heder-portfolio" class="dropdown-item">スキル</a>
+						<!-- <div class="dropdown-divider"></div> -->
+						<a id="heder-children" class="dropdown-item">制作物</a>
+					</div>
+				</li>
+				<li id="heder-contact" class="header-pointer">Contact</li>
 				<!-- <li><a href="./CharacterConversion/">日本語カタカナ</a></li>
 				<li><a href="./fivaridMap/">fivaridMap</a></li>
 				<li><a href="./Javasript_date_plan/">Javasript_date_plan</a></li> -->
