gitignoreファイル整備

--- a/home/header.html
+++ b/home/header.html
@@ -1,4 +1,4 @@
-<header class="">
+<header class="sa sa--down">
 	<div class="container" style="">
 		<div class="crescent-moon" style="margin: 0 3.0rem 0 auto ;">
 			<a href=""></a>		
