--- a/home/header.html
+++ b/home/header.html
@@ -5,17 +5,17 @@
 		</div>
 		<nav>
 			<ul class="" style="margin:0 8.0rem 0 0; padding:0;">
-				<li id="heder-top" class="header-pointer">トップ</li>
+				<li id="" class="scroll-top header-pointer">トップ</li>
 				<li id="" class="header-pointer dropdown">
 					<a class="dropdown-toggle">portfolio</a>
 					<div class="dropdown-menu">
-						<a id="heder-profile" class="dropdown-item">プロフィール</a>
-						<a id="heder-portfolio" class="dropdown-item">スキル</a>
+						<a id="" class="scroll-profile dropdown-item">プロフィール</a>
+						<a id="" class="scroll-portfolio dropdown-item">スキル</a>
 						<!-- <div class="dropdown-divider"></div> -->
-						<a id="heder-children" class="dropdown-item">制作物</a>
+						<a id="" class="scroll-children dropdown-item">制作物</a>
 					</div>
 				</li>
-				<li id="heder-contact" class="header-pointer">Contact</li>
+				<li id="" class="scroll-contact header-pointer">Contact</li>
 				<!-- <li><a href="./CharacterConversion/">日本語カタカナ</a></li>
 				<li><a href="./fivaridMap/">fivaridMap</a></li>
 				<li><a href="./Javasript_date_plan/">Javasript_date_plan</a></li> -->
