モーダル機能実装（修正必要）

--- a/home/header.html
+++ b/home/header.html
@@ -5,9 +5,9 @@
 		</div>
 		<nav>
 			<ul class="" style="margin:0 8.0rem 0 0; padding:0;">
-				<li id="" class="scroll-top header-pointer">トップ</li>
+				<li id="" class="scroll-top header-pointer">Top</li>
 				<li id="" class="header-pointer dropdown">
-					<a class="dropdown-toggle">portfolio</a>
+					<a class="dropdown-toggle">Portfolio</a>
 					<div class="dropdown-menu">
 						<a id="" class="scroll-profile dropdown-item">プロフィール</a>
 						<a id="" class="scroll-portfolio dropdown-item">スキル</a>
